<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:src="@drawable/bzv2"
        android:contentDescription="@string/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/welcome"
        android:textSize="36sp"

        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/login"

        android:layout_marginTop="10dp"

        android:autofillHints="username"
        android:inputType="textCapWords"

        android:hint="@string/login"

        android:textSize="36sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/password"

        android:layout_marginTop="10dp"

        android:autofillHints="password"
        android:inputType="textPassword"

        android:hint="@string/password"

        android:textSize="36sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/go_to_order"

        android:textSize="36sp"
        android:padding="15dp"
        android:onClick="GoToOrder"/>
</LinearLayout>