<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ordering">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bzv2"
        android:contentDescription="@string/logo"

        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <TextView android:id="@+id/ChoiceGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/choose_your_size"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@id/select_size"/>

    <Spinner android:id="@+id/select_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="15dp"

        android:entries="@array/array_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChoiceGender"
        app:layout_constraintBottom_toTopOf="@id/Count"/>

    <TextView android:id="@+id/Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/count"
        android:textSize="36sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar" />

    <SeekBar android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:min="1"
        android:max="10"
        android:progress="1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Count"
        app:layout_constraintBottom_toTopOf="@id/ChoiceType"/>
    <TextView android:id="@+id/ChoiceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/choose_the_type_of_clothing"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Count"
        app:layout_constraintBottom_toTopOf="@id/countriesList"/>

    <ListView android:id="@+id/countriesList"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:entries="@array/array_type_cloth"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChoiceType"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>